upando antes do intervalo

--- a/AULA 02 - ALUNO/index.html
+++ b/AULA 02 - ALUNO/index.html
@@ -30,6 +30,7 @@
               id="nome"
               class="valor"
               placeholder="Nome do Cliente"
+              onkeypress="setBlockNumber()"
             />
             <br />
             <label>E-mail:</label
